Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1623

UPSERTs that include only PK columns can cause crashes

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • 0.9.1, 1.0.0
    • 1.0.1, 1.1.0
    • tablet
    • None

    Description

      If an UPSERT only specifies the PK columns of a table (eg because all of the columns in the table make up a PK, or because the other columns should be set to defaults), then on a duplicate key, the upserts will be converted into empty updates. These empty updates fire DCHECKs in debug mode, but in RELEASE mode can end up in delta stores and later cause unexpected crashes on flush.

      Attachments

        Activity

          People

            Unassigned Unassigned
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: